Fixed the flutter issue on scroll & play only visible animations

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
 }
 #design-for-grid{
     text-align: center;
+    height: 50vh;
 }
 #great-thinkers{
     background-color: #284F59;
